--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "multer": "^1.4.5-lts.1",
-    "node-mailjet": "^6.0.5"
+    "csvtojson": "^2.0.10",
+    "multer": "^1.4.5-lts.1"
   }
 }
