--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "csvtojson": "^2.0.10",
     "flatted": "^3.3.1",
     "multer": "^1.4.5-lts.1",
+    "react-spinners": "^0.13.8",
     "xlsx": "^0.18.5"
   }
 }
