--- a/backend/package.json
+++ b/backend/package.json
@@ -1,10 +1,13 @@
 {
   "dependencies": {
     "axios": "^1.6.8",
+    "bson": "^6.7.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongodb": "^6.5.0",
-    "mongoose": "^8.3.2"
+    "mongodb": "^5.9.1",
+    "mongoose": "^8.3.2",
+    "multer": "^1.4.4",
+    "nodemon": "^3.1.2"
   }
 }
