--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "flatted": "^3.3.1",
     "multer": "^1.4.5-lts.1",
     "react-spinners": "^0.13.8",
+    "toastify": "^2.0.1",
     "xlsx": "^0.18.5"
   }
 }
