--- a/backend/package.json
+++ b/backend/package.json
@@ -9,5 +9,9 @@
     "mongoose": "^8.3.2",
     "multer": "^1.4.4",
     "nodemon": "^3.1.2"
+  },
+  "scripts": {
+    "start": "nodemon database"
   }
+
 }
