--- a/package.json
+++ b/package.json
@@ -1,10 +1,17 @@
 {
   "dependencies": {
+    "concurrently": "^8.2.2",
     "csvtojson": "^2.0.10",
     "flatted": "^3.3.1",
     "multer": "^1.4.5-lts.1",
     "react-spinners": "^0.13.8",
     "toastify": "^2.0.1",
     "xlsx": "^0.18.5"
+  },
+  "scripts": {
+    "frontend" :"cd frontend/src/frontend && npm start",
+    "backend":"cd backend && npm start",
+    "dev":"concurrently \"npm run frontend\" \"npm run backend\""
   }
+
 }
