--- a/backend/package.json
+++ b/backend/package.json
@@ -1,10 +1,12 @@
 {
   "dependencies": {
     "axios": "^1.6.8",
+    "bcrypt": "^5.1.1",
     "bson": "^6.7.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^5.9.1",
     "mongoose": "^8.3.2",
     "multer": "^1.4.4",
@@ -13,5 +15,4 @@
   "scripts": {
     "start": "nodemon database"
   }
-
 }
